--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -171,6 +171,7 @@ body::before {
   overflow: hidden;
 
   border-radius: 20px;
+  transform: translateZ(0);
 }
 
 .about-me__intro-drei-pic {
@@ -178,6 +179,7 @@ body::before {
   overflow: hidden;
 
   border-radius: 20px;
+  transform: translateZ(0);
 }
 
 .about-me__intro-drei-title {
@@ -365,6 +367,7 @@ body::before {
   margin-left: -30px;
   transition: all 0.3s;
   border-radius: 20px;
+  transform: translateZ(0);
 } */
 
 .pricing__prices {
